# libserialport-cmake

./: CMakeLists.txt  libserialport.pc.in  libserialport_internal.h  serialport.c  timing.c
